--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,7 @@
 <head>
     <link rel="shortcut icon" href="images/ui/logoRollo.svg">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/media.css' />
     <link rel='stylesheet' href='/stylesheets/logosMarcas.css' />
     <link rel='stylesheet' href='/stylesheets/carruseles.css' />
     <link rel="stylesheet" href="path-to-the-file/splide.min.css">
