--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
                 <li><a href="#Contacto">Contacto</a></li>
                 <li><a href="#Cotizador">Cotizador</a></li>
                 <a href="/" class="homeBtn">
-                    <button><span><i class="" ></i></span>  <strong>&#8592;</strong> Volver al Home</button>
+                    <button><span><i class="fa fa-arrow-left" ></i></span>   Volver al Home</button>
                 </a>
                 <a href="https://api.whatsapp.com/send?phone=541134209000" class="wspBtn">
                     <button><span><i class="fa fa-whatsapp" ></i></span> Contactate con nosotros</button>
@@ -47,6 +47,12 @@
             <li><a href="#AboutUs">Sobre nosotros</a></li>
             <li><a href="#Contacto">Contacto</a></li>
             <li><a href="#Cotizador">Cotizador</a></li>
+            <a href="/" class="homeBtn">
+                <button><span><i class="fa fa-arrow-left" ></i></span>   Volver al Home</button>
+            </a>
+            <a href="https://api.whatsapp.com/send?phone=541134209000" class="wspBtn">
+                <button><span><i class="fa fa-whatsapp" ></i></span> Contactate con nosotros</button>
+            </a>
         </ul>
     </div>
 </header>
