--- a/views/cotizador.ejs
+++ b/views/cotizador.ejs
@@ -10,7 +10,6 @@
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c838d3aca8.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Cotizador</title>
 </head>
@@ -27,70 +26,68 @@
                     <div class="step step-1 index active">
                         <div class="form-group">
                             <label for="tela">Ingrese largo deseado</label>
-                            <input type="text" id="tela" placeholder="Largo mín 300m"name="tela">
+                            <input type="text" id="tela" placeholder="Largo mín 300m" name="largo de tela">
                         </div>
                         <div class="form-group">
-                            <label for="opciones">Opciones</label>
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>Seleccionar color de Tela</option>
-                                <option value="claro">Claro</option>
-                                <option value="oscuro">Oscuro</option>
+                            <label for="opciones">tipo de tela</label>
+                            <select class="form-select" aria-label="Default select example" placeholder="Seleccionar color de Tela" name="tipo de tela">
+                                <option selected value="claro">Clara</option>
+                                <option value="oscuro">Oscura</option>
                             </select>
                           </div>
                           <div >      
-                            <button type="button" class="next-btn">Seleccionar estampado</button>
                         </div>
+                        <button type="button" class="next-btn">Seleccionar estampado</button>
                     </div>
     
                     <div class="step step-2">
-                        <div class="form-group">
+                        <div class="form-group" id="estampado">
                             <label for="tipoEstampado">Establecer estampado</label>
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>Seleccionar de nuestros estampados</option>
-                                <option value="claro">Animal</option>
-                                <option value="claro">Infantil</option>
-                                <option value="claro">Rayados</option>
+                            <select class="form-select" aria-label="Default select example" name="estampado" placeholder="tipo de estampado">
+                                <option value="all">Todos</option>
+                                <option value="Animal">Animal</option>
+                                <option value="Infantil">Infantil</option>
+                                <option value="Rayados">Rayados</option>
                             </select>
                             
-                        </div>
-                        <div class="imageCotizador">
-                            <div class="column">
-                                <img src="/images/estampados/animal/1.jpg" alt="Snow" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
-                              </div>
-                              <div class="column">
-                                <img src="/images/estampados/infantil/1.jpg" alt="Forest" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
-                              </div>
-                              <div class="column">
-                                <img src="/images/estampados/rayados/1.jpg" alt="Mountains" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
-                              </div>
-                              <div class="column">
-                                <img src="/images/estampados/animal/1.jpg" alt="Snow" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
-                              </div>
-                              <div class="column">
-                                <img src="/images/estampados/infantil/1.jpg" alt="Forest" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
-                              </div>
-                              <div class="column">
-                                <img src="/images/estampados/rayados/1.jpg" alt="Mountains" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
-                              </div>
-                              <div class="column">
-                                <img src="/images/estampados/animal/1.jpg" alt="Snow" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
-                              </div>
-                              <div class="column">
-                                <img src="/images/estampados/infantil/1.jpg" alt="Forest" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
-                              </div>
-                              <div class="column">
-                                <img src="/images/estampados/rayados/1.jpg" alt="Mountains" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
-                              </div>
+                            <div class="imageCotizador">
+                                <div class="column">
+                                    <img src="/images/estampados/animal/1.jpg" alt="Snow" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;" onclick="selectImage(this)">
+                                  </div>
+                                  <div class="column">
+                                    <img src="/images/estampados/infantil/1.jpg" alt="Forest" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
+                                  </div>
+                                  <div class="column">
+                                    <img src="/images/estampados/rayados/1.jpg" alt="Mountains" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
+                                  </div>
+                                  <div class="column">
+                                    <img src="/images/estampados/animal/1.jpg" alt="Snow" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
+                                  </div>
+                                  <div class="column">
+                                    <img src="/images/estampados/infantil/1.jpg" alt="Forest" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
+                                  </div>
+                                  <div class="column">
+                                    <img src="/images/estampados/rayados/1.jpg" alt="Mountains" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
+                                  </div>
+                                  <div class="column">
+                                    <img src="/images/estampados/animal/1.jpg" alt="Snow" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
+                                  </div>
+                                  <div class="column">
+                                    <img src="/images/estampados/infantil/1.jpg" alt="Forest" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
+                                  </div>
+                                  <div class="column">
+                                    <img src="/images/estampados/rayados/1.jpg" alt="Mountains" style="width:100%; box-shadow: 0px 3px 6px rgba(0,0,0,0.4); cursor: pointer;">
+                                  </div>
+                            </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" id="estampadoPersonalizado">
                             <label for="estampaPersonalizado" class="form-label">Carga un estampado personalizado</label>
-                            <input class="form-control" type="file" id="estampa">
+                            <input class="form-control" type="file"  name="estampado personalizado" onclick="selectedFile()">
                             </p>
-                            <button type="button" class="prev-btn">Anterior</button>
-                            <button type="button" class="next-btn">Ingresar datos de Contacto</button>
-
                         </div>
+                        <button type="button" class="prev-btn">Anterior</button>
+                        <button type="button" class="next-btn">Ingresar datos de Contacto</button>
                     </div>
     
                     <div class="step step-3">
@@ -112,26 +109,23 @@
                         </div>
                         <div class="form-group">
                             <label for="entrega">Selección de entrega</label>
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>Opciones...</option>
-                                <option value="entregaDomicilio">Entrega a Domicilio</option>
-                                <option value="retiro">Retiro</option>
+                            <select class="form-select" aria-label="Default select example" name="tipo de entrega" id="entrega">
+                                <option  value="entregaDomicilio">Entrega a Domicilio</option>
+                                <option selected value="retiro">Retiro</option>
                             </select>
                         </div>
                         <button type="button" class="prev-btn">Anterior</button>
                         <button type="button" class="sub-btn" data-toggle="modal" data-target="#exampleModalCenter">
                           Confirmar Cotización
-                      </button>
+                         </button>
     
                       <!-- Modal -->
                       <div class="modal fade" style="color: black" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                           <div class="modal-dialog modal-dialog-centered" role="document">
                               <div class="modal-content" >
                                   <div class="modal-header">
-                                      <h5 class="modal-title" id="exampleModalLongTitle">Confirmación</h5>
-                                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                          <span aria-hidden="true">&times;</span>
-                                      </button>
+                                      <h5 class="modal-title" id="exampleModalLongTitle">Enviar cotización</h5>
+
                                   </div>
                                   <div class="modal-body">
                                       Tu solicitud de cotización esta por ser enviada. Nos pondremos en contacto para que recibas toda la información sobre tu cotización <br>
@@ -140,7 +134,7 @@
                                   </div>
                                   <div class="modal-footer">
                                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                                      <button type="submit" class="btn btn-primary">Enviar Cotización</button>
+                                      <button type="submit" class="btn btn-primary" data-dismiss="modal" onclick="sendCotizacion()">Enviar Cotización</button>
                                   </div>
                               </div>
                           </div>
