--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
 <head>
     <link rel="shortcut icon" href="images/ui/logoRollo.svg">
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/media.css' />
     <link rel='stylesheet' href='/stylesheets/logosMarcas.css' />
