--- a/views/cotizador.ejs
+++ b/views/cotizador.ejs
@@ -144,9 +144,11 @@
     
             </div>
         </section>
-        <div class="contact-container">
+        <div class="contact-container" id="contact-container">
             <div class="enroll">
-                <h2>Contactanos</h2>
+                <a href="#contact-container">
+                    <h2 class="contact-scroll">Contactanos</h2>
+                </a>
             </div>
             <section class="newsletterContainer" id="Contacto">
                 <div id="backgroudTransparent">
