--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,20 +32,25 @@
 
                             <div class="list">
                                 <div>
-                                    <img src="images/estampados/animal/1.jpg" alt="">
-                                    <img src="images/estampados/animal/2.jpg" alt="">
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/11.020.svg)"></div>
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/11.063.svg)"></div>
+
                                 </div>
                                 <div>
-                                    <img src="images/estampados/animal/3.jpg" alt="">
-                                    <img src="images/estampados/animal/4.jpg" alt="">
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/11.199.svg)"></div>
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/11.219.Kitten.svg)"></div>
                                 </div>
                                 <div>
-                                    <img src="images/estampados/animal/5.jpg" alt="">
-                                    <img src="images/estampados/animal/6.jpg" alt="">
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/11.279.Animal.svg)"></div>
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/11.285.Constanza.svg)"></div>
                                 </div>
                                 <div>
-                                    <img src="images/estampados/animal/7.jpg" alt="">
-                                    <img src="images/estampados/animal/1.jpg" alt="">
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/11.316.svg)"></div>
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/11.326.Hanna.svg)"></div>
+                                </div>
+                                <div>
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/11.400.svg)"></div>
+                                    <div class="estampadoImg" style="background-image: url(images/estampados/animal/30.779.svg)"></div>
                                 </div>
 
                             </div>
