--- a/public/stylesheets/cotizador.css
+++ b/public/stylesheets/cotizador.css
@@ -187,13 +187,13 @@ button.sub-btn:hover{
 
 .contact-container {
   margin: 5%;
-  margin-top: 92vh;
+  margin-top: 94vh;
   margin-bottom: 3vh;
   position: absolute;
   width: 90%;
   border-radius:5px;
   box-shadow: 0px -3px 8px 2px rgba(0,0,0,0.65);
-  background: url('../images/ui/telar4.jpg') no-repeat;
+  background:#fff;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
