--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -451,6 +451,7 @@ div.body-container {
   border-radius:5px;
   box-shadow: 0px -3px 8px 2px rgba(0,0,0,0.65);
   background: url('../images/ui/telar4.jpg') no-repeat;
+  background: #fafafa;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -612,8 +613,23 @@ div.body-container  h1{
   justify-content: center;
   align-items: center;
 }
+.estamapados-catalogo .list div{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
-
+.estamapados-catalogo .list .estampadoImg {
+    margin: 15px 20px;
+    width: 19vw;
+    height: 33vh;;
+  border-radius:10px;
+  box-shadow: 0 3px 12px rgb(0 0 0 / 40%);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: center;
+}
 .estamapados-catalogo .list img {
     margin: 15px 20px;
     width: 19vw;
@@ -916,21 +932,25 @@ div.body-container .aboutContainer h1{
   padding: 5px;
   max-width:50vw;
   text-align: center;
-  background: #7B77F2;
   border-radius:  25px;
-  box-shadow: 0 0px 4px #8b8b8b80 inset;
   z-index: 0;
 }
 .cotizadorTexto div{
-  border: 4px dashed #fff;
+  font-weight: 500;
+  border: 4px dashed #7B77F2;
+  color:#7B77F2;
   border-radius: 25px;
   padding: 15px;
+  box-shadow: 0 0px 5px 2px #60606080 inset;
 }
 
 .cotizadorTexto P{
   text-align: center;
 }
-
+.cotizadorTexto strong{
+font-weight: 600;
+font-size: 26px;
+}
 
 .cotizadorTexto ol {
   display: flex;
@@ -939,6 +959,7 @@ div.body-container .aboutContainer h1{
   align-items: flex-start;
   margin-left: 40px;
   text-align: initial;
+  font-size: 22px;
 }
 
 .cotizadorContenido button {
@@ -946,24 +967,25 @@ div.body-container .aboutContainer h1{
   color: #0D0D0D;
   font-weight: bold;
   font-size:23px ;
-  padding: 15px 20px;
+  padding: 10px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  width: 280px;
+  width: 330px;
   cursor: pointer;
   box-shadow: 0 3px 4px rgb(0 0 0 / 50%);
   border: 2px solid #0D0D0D;
   Background-color: #7B77F2;
   height:60px;
   z-index: 1;
+  letter-spacing: 2px;
   bottom:0;
   position: absolute;
   border-radius: 4px;
 }
 .cotizadorContenido .btnBox{
   position: relative;
-  width: 300px;
+  width: 350px;
   height: 80px;
   animation: move 5s infinite;
 
@@ -985,7 +1007,7 @@ div.body-container .aboutContainer h1{
 }
 .cotizadorContenido #btnShadow{
   Background-color: #7B77F2;
-  width: 280px;
+  width: 330px;
   height:60px;
   position: absolute;
   bottom: -10px;
