--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -588,7 +588,8 @@ div.body-container  h1{
 
 #view-Rayados .estamapados-categories{
   justify-content: flex-start;
-
+  padding-right: 0%;
+  padding-left: 20%;
 }
 
 
@@ -652,7 +653,7 @@ div.body-container  h1{
 }
 
 .estamapados-view .ilustration {
-  width: 35vw;
+  width: 40vw;
   height: 420px;
   background-repeat: no-repeat;
   background-size: contain;
