--- a/public/stylesheets/cotizador.css
+++ b/public/stylesheets/cotizador.css
@@ -218,6 +218,31 @@ button.sub-btn:hover{
   text-decoration: none !important;
 }
 
+#tableEstampados{
+  width: 100%;
+  height: 300px;
+  padding: 10px 0px 0px 0px;
+  display: flex;
+  flex-flow: wrap;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+#tableEstampados div{
+  height: 140px;
+  width: 175px;
+  margin:0 5px 5px 5px;
+  background-attachment: local;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#tableEstampados div:hover{
+  cursor: pointer;
+  opacity: 0.8;
+  filter: brightness(110%);
+  transform: translate3d(0px, -3px, 0px);
+}
+
 @media all and (max-width: 1400px) {
 
   .menu{
@@ -327,6 +352,8 @@ button.sub-btn:hover{
     margin-top: 190vh;
   }
 }
+
+
 
 @media all and (max-width: 625px) {
   .menu ul a{
