--- a/public/stylesheets/cotizador.css
+++ b/public/stylesheets/cotizador.css
@@ -214,7 +214,7 @@ button.sub-btn:hover{
   text-decoration:underline !important;
 }
 #suriSlug h4 a:hover{
-  color: #7B77F2 !important;
+  color: #80cec1 !important;
   text-decoration: none !important;
 }
 
