--- a/views/cotizador.ejs
+++ b/views/cotizador.ejs
@@ -25,12 +25,12 @@
                 <form action="/confirm">        
                     <div class="step step-1 index active">
                         <div class="form-group">
-                            <label for="tela">Ingrese largo deseado</label>
-                            <input type="text" id="tela" placeholder="Largo mín 300m" name="largo de tela">
+                            <label for="tela">Ingrese tamaño de la tela</label>
+                            <input type="text" id="tela" placeholder="" name="largo de tela">
                         </div>
                         <div class="form-group">
                             <label for="opciones">tipo de tela</label>
-                            <select class="form-select" aria-label="Default select example" placeholder="Seleccionar color de Tela" name="tipo de tela">
+                            <select class="form-select" aria-label="Default select example" placeholder="Seleccionar tonalidad de Tela" name="tipo de tela">
                                 <option selected value="claro">Clara</option>
                                 <option value="oscuro">Oscura</option>
                             </select>
@@ -109,13 +109,13 @@
                             <label for="direccion">Direccion</label>
                             <input type="text" id="direccion" name="direccion">
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="entrega">Selección de entrega</label>
                             <select class="form-select" aria-label="Default select example" name="tipo de entrega" id="entrega">
                                 <option  value="entregaDomicilio">Entrega a Domicilio</option>
                                 <option selected value="retiro">Retiro</option>
                             </select>
-                        </div>
+                        </div> -->
                         <button type="button" class="prev-btn" id="prevstep3">Anterior</button>
                         <button type="button" class="sub-btn" data-toggle="modal" data-target="#exampleModalCenter" id="nextstep3">
                           Confirmar Cotización
