--- a/views/home.ejs
+++ b/views/home.ejs
@@ -184,7 +184,8 @@
                                 <li>Ingresa tus datos de contacto</li>
                             </ul>
                             </ol>
-                            <p><strong>Y listo !</strong></p>
+                            <p><strong>¡ Y listo !</strong></p>
+                            <img src="images\ui\calculator.png" alt="" class="cotizador ">
                         </div>
                     </article>
                     <div class="btnBox">
