--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="#Estampados">Estampados</a></li>
                 <li><a href="#AboutUs">Sobre nosotros</a></li>
-                <li><a href="#Contacto">Contacto</a></li>
+                <!-- <li><a href="#Contacto">Contacto</a></li> -->
                 <li><a href="#Cotizador">Cotizador</a></li>
                 <a href="/" class="homeBtn">
                     <button><span><i class="fa fa-arrow-left" ></i></span>   Volver al Home</button>
@@ -22,9 +22,9 @@
                 </a>
             </ul>
         </div>
-        <div class="logo2Container" onClick="showDrawer()" id="logo2Container">
+        <!-- <div class="logo2Container" onClick="showDrawer()" id="logo2Container">
             <img src="/images/ui/logoRollo.svg">
-        </div>
+        </div> -->
     </div> 
     <!-- <div class="socialBox">
         <div class="iconsContainer">
