--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,7 +57,7 @@ h3{
   width: 100%;
   justify-content: center;
   margin: 50px 0;
-  color: #7B77F2;
+  color: #80cec1;
 }
 
 .iconsContainer{
@@ -174,7 +174,7 @@ header.sticky{
   width: 100%;
   z-index: 10001;
   height: 75px;
-  background-color: #F27983;
+  background-color: #ec7571;
   transition: all 0.5s ease-in;
   box-shadow: 0 3px 12px rgb(0 0 0 / 40%);
 }
@@ -299,9 +299,9 @@ header.sticky #drawer{
   cursor: pointer;
 }
 header .menu button:hover{
-  color: white;
-  border: 2px solid white;
-  background-color: #D95959;
+  color:#0d0d0d ;
+  border: 0.5px solid #0d0d0d;
+  background-color: #ecb0b0;
 }
 .menu button span{
   font-size: 20px;
@@ -435,7 +435,7 @@ header.sticky .menu ul li a:hover {
 }
 .presentacionTransparent #word{
   transition: all 1s;
-  color : #F27983;
+  color : #f58883;
   text-shadow: 0 3px 2px black;
 }
 .presentacionTransparent #word.transparent{
@@ -541,7 +541,7 @@ div.body-container  h1{
 #Estampados h1{
   margin: 50px 0;
   margin-top:100px;
-  color:#7B77F2;
+  color:#80cec1;
 }
 
 
@@ -580,8 +580,8 @@ div.body-container  h1{
   margin:10px 20px;
   margin-bottom: 40px;
   cursor:pointer;
-  border: 2px solid #7B77F2;
-  color:#7B77F2;
+  border: 2px solid #80cec1;
+  color:#80cec1;
   transition: all 1s;
 }
 
@@ -594,7 +594,9 @@ div.body-container  h1{
 
 
 .estamapados-categories h3:hover{
-  background-color: #7B77F2;
+  border: 2px solid #a3d7cb;
+
+  background-color: #a3d7cb;
   color: #fff;
 
 }
@@ -602,7 +604,7 @@ div.body-container  h1{
 .estamapados-categories h3.clicked
 {
   color: #fff;
-  background-color: #F26363;
+  background-color: #f58883;
 }
 
 .estamapados-catalogo .list{
@@ -712,7 +714,7 @@ div.body-container  h1{
 
 .titulo-marcas{
   text-align: center;
-  color: #0D0D0D;
+  color: #80cec1;
   padding-top:20px;
   /* text-shadow: 0px 2px 6px rgba(0,0,0,0.4); */
 }
@@ -798,7 +800,7 @@ div.body-container .aboutContainer p{
   font-size:16px ;
 }
 div.body-container .aboutContainer h1{
-  color: #F27983;
+  color: #f58883;
   font-size:4rem;
 }
 #fondoTriangulo{
@@ -824,7 +826,7 @@ div.body-container .aboutContainer h1{
 .newsletterContainer #backgroudTransparent{
   padding-bottom: 100px;
   padding-top: 100px;
-  background:hsla(242, 83%, 71%, 0.8);
+  background:#80cec1cc;
   background-position: center;
   background-attachment: fixed;
   background-clip: border-box;
@@ -858,7 +860,7 @@ div.body-container .aboutContainer h1{
 
 .newsletterBox{
   display: flex;
-  color:#F27983;
+  color:#f58883;
   font-size:28px;
   font-weight:600;
   flex-direction: column;
@@ -936,13 +938,24 @@ div.body-container .aboutContainer h1{
   border-radius:  25px;
   z-index: 0;
 }
+
+.cotizadorTexto div{
+  position: relative;
+}
+
+.cotizadorTexto img{
+  position: absolute;
+  right: 40px;
+  bottom: 10px;
+}
 .cotizadorTexto div{
   font-weight: 500;
-  border: 4px dashed #7B77F2;
-  color:#7B77F2;
+  border: 4px dashed #80cec1;
+  color:#fff;
   border-radius: 25px;
   padding: 15px;
-  box-shadow: 0 0px 5px 2px #60606080 inset;
+  background-color:#80cec1
+  /* box-shadow: 0 0px 5px 2px #60606080 inset; */
 }
 
 .cotizadorTexto P{
@@ -975,8 +988,8 @@ font-size: 26px;
   width: 330px;
   cursor: pointer;
   box-shadow: 0 3px 4px rgb(0 0 0 / 50%);
-  border: 2px solid #0D0D0D;
-  Background-color: #7B77F2;
+  /* border: 2px solid #0D0D0D; */
+  Background-color: #80cec1;
   height:60px;
   z-index: 1;
   letter-spacing: 2px;
@@ -1007,7 +1020,7 @@ font-size: 26px;
   animation:none;
 }
 .cotizadorContenido #btnShadow{
-  Background-color: #7B77F2;
+  Background-color: #80cec1;
   width: 330px;
   height:60px;
   position: absolute;
@@ -1037,7 +1050,7 @@ footer{
   display: flex;
   flex-direction:row;
   justify-content: space-around;
-  color:#F27983;
+  color:#f58883;
   width: 100%;
   padding: 10px 0;
   border-radius: 0 0 5px 5px;
@@ -1045,14 +1058,14 @@ footer{
 
 footer span {
   padding: 10px 20px;
-  border: 2px solid #F27983;
+  border: 2px solid #f58883;
   border-radius: 5px;
   font-size: 22px;
   font-weight: 600;
   cursor: pointer;
 }
 footer span:hover{
-  background-color:#F27983;
+  background-color:#f58883;
   color:white;
   border-color:white;
 }
@@ -1073,7 +1086,7 @@ footer span:hover{
   text-decoration:underline;
 }
 #suriSlug h4 a:hover{
-  color: #7B77F2;
+  color: #80cec1;
   text-decoration: none;
 }
 /* ---- Media Querys  ---- */
