--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 
   <span onclick="copy(this)">+54 11 3420-9000</span>
   <span onclick="copy(this)">info@fernatex.com.ar</span>
-  <span >Lun. a vie. 9:00-16:00 </span>
+  <span >Lun. a vie. 9:00 - 16:00 </span>
 
 </footer>
 
