--- a/views/cotizador.ejs
+++ b/views/cotizador.ejs
@@ -105,10 +105,10 @@
                             <label for="telefono">Telefono</label>
                             <input type="number" id="telefono" name="telefono">
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="direccion">Direccion</label>
                             <input type="text" id="direccion" name="direccion">
-                        </div>
+                        </div> -->
                         <!-- <div class="form-group">
                             <label for="entrega">Selección de entrega</label>
                             <select class="form-select" aria-label="Default select example" name="tipo de entrega" id="entrega">
