--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -667,7 +667,7 @@ div.body-container  h1{
 }
 .estamapados-view .ilustration.animales{
 
-  background-image: url(../images/ilustraciones/animales.svg);
+  /* background-image: url(../images/ilustraciones/animales.svg); */
 
 }
 .estamapados-view .ilustration.rayados{
